--- a/application/views/media/css/web.css
+++ b/application/views/media/css/web.css
@@ -47,7 +47,7 @@ p.confirm a { font-size: 1.2em; padding: 0 0.3em; }
 /* Main Body */
 #body { padding: 2em 4em 1em; _margin-top: -1.1em; background: #f7fbf1; }
 	#body form .legend { background: #ddefbd; }
-	#body .intro { background: #eaeee5; }
+	#body .intro { margin-bottom: 1em; margin-left: -4em; padding: 1em 2em; padding-left: 4em; background: #eaeee5; color: #8C9393; }
 	#body .intro strong { text-transform: uppercase; font-weight: bold; font-size: 0.76em; color: #7b7d78; letter-spacing: -0.02em; white-space: nowrap; }
 
 /* Content */
